--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,31 +1,25 @@
 {
     "title": "Gutenberg Book Analyzer",
     "navTitle": "Gutenberg Book Analyzer",
-    "bookForm": {
-      "placeholder": "Please enter book ID",
-      "required": "Book ID is required",
-      "numbersOnly": "Please enter numbers only",
-      "analyzeButton": "Analyze"
-    },
-    "bookInfo": {
-      "title": "Book Information",
-      "id": "Book ID",
-      "metadataAvailable": "Metadata Available",
-      "yes": "Yes",
-      "no": "No",
-      "analyzeCharacters": "Analyze Characters",
-      "analyzing": "Analyzing Characters..."
-    },
-    "characterAnalysis": {
-      "title": "Character Analysis",
-      "characters": "Characters",
-      "name": "Name",
-      "description": "Description",
-      "interactions": "Interactions",
-      "source": "Characters",
-      "interaction": "Interaction",
-      "strength": "Strength"
-    },
+    "placeholder": "Please enter book ID",
+    "required": "Book ID is required",
+    "numbersOnly": "Please enter numbers only",
+    "analyzeButton": "Analyze",
+    "loading": "Loading...",
+    "id": "Book ID",
+    "metadataAvailable": "Metadata Available",
+    "yes": "Yes",
+    "no": "No",
+    "bookInformation": "Book Information",
+    "analyzeCharacters": "Analyze Characters",
+    "analyzing": "Analyzing Characters...",
+    "characters": "Characters",
+    "name": "Name",
+    "description": "Description",
+    "interactions": "Interactions",
+    "source": "Characters",
+    "interaction": "Interaction",
+    "strength": "Strength",
     "preview": {
       "title": "Preview Content"
     },
@@ -35,5 +29,11 @@
     },
     "nav": {
       "title": "Gutenberg Book Analyzer"
-    }
+    },
+    "foundBook": "Found book with ID",
+    "bookFetchError": "Failed to find the book. Please check the ID and try again.",
+    "genericError": "An error occurred while fetching the book.",
+    "characterAnalysisComplete": "Character analysis complete!",
+    "analysisError": "Failed to analyze characters.",
+    "analysisGenericError": "An error occurred during character analysis."
   }
