add ui visualization for character relations

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -46,5 +46,6 @@
     "author": "المؤلف",
     "language": "اللغة",
     "subjects": "المواضيع",
-    "summary": "ملخص"
+    "summary": "ملخص",
+    "characterRelationships": "علاقات الشخصيات"
   }
