--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -46,5 +46,6 @@
     "author": "Author",
     "language": "Language",
     "subjects": "Subjects",
-    "summary": "Summary"
+    "summary": "Summary",
+    "characterRelationships": "Character Relationships"
   }
